2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move checks for GCC __attribute__ handling to configure.in

	* configure.in (RCS_CHECK_GCC_ATTRIBUTE): New AC_DEFUN.
	(noreturn, format): New RCS_CHECK_GCC_ATTRIBUTE calls.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Don't bother checking `const', `volatile' handling.

	* conf.sh: Remove checks for `const', `volatile' handling.

2010-02-26  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move check for system headers into configure.in.

	* configure.in (AC_CHECK_HEADERS_ONCE): New.

2010-02-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Require a C99-capable compiler.

	* configure.in (AC_PROG_CC): Delete.
	(AC_PROG_CC_C99): New.
	If no C99-capable compiler is found, error out.

2010-02-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Use zero-arg form of AC_OUTPUT.

	* configure.in (AC_CONFIG_FILES): New.
	(AC_OUTPUT): Move args to `AC_CONFIG_FILES'.

2010-02-25  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Move authoritative version number into configure.in.

	* autogen.sh: New file.
	* configure.in (AC_INIT): Use three-arg form.
	(AC_CONFIG_HEADERS): New.
	* Makefile.in (PACKAGE_VERSION, PACKAGE_TARNAME): New vars.
	(dist): Use them.

2010-02-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[admin] On "make dist", don't bother with tar(1) blocking factor.

	* Makefile.in (dist): Don't specify the tar(1) blocking factor.

2010-02-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[man] Set metainfo at "make dist"; say "GNU RCS <VERSION>".

	* Makefile.in (dist) <man>: Prepend release version and release date.

2010-02-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	In RCS paper by W.F. Tichy, don't specify a separate title page.

	* rcs.ms (Id): Delete macro definition.
	(.Id, .RP): Delete.

2010-02-24  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[admin] Distribute only one copy of COPYING.

	* Makefile.in (dist): Don't distribute man/COPYING, man/COPYING.

2010-02-24  Thien-Thi Nguyen  <ttn@gnuvola.org>
