@@ -310,6 +310,21 @@ AC_CHECK_HEADERS_ONCE([
   sys/param.h
 ])
 
+# types -- see also: (info "(autoconf) Particular Types")
+AC_TYPE_MODE_T
+AC_TYPE_OFF_T
+AC_TYPE_PID_T
+AC_TYPE_SSIZE_T
+AC_TYPE_UID_T
+AC_CHECK_TYPE([sig_atomic_t],,[dnl
+  AC_DEFINE([sig_atomic_t], int,
+    [Define to `int' if <signal.h> does not define.])
+],[dnl
+#ifdef HAVE_SIGNAL_H
+# include <signal.h>
+#endif
+])
+
 AC_CONFIG_FILES([
   Makefile
   man/Makefile
